# ppx_fixed_literal

./: ppx_fixed_literal.opam
src/: dune  ppx_fixed_literal.ml
