opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_fixed_literal"
bug-reports: "https://github.com/janestreet/ppx_fixed_literal/issues"
dev-repo: "git+https://github.com/janestreet/ppx_fixed_literal.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_fixed_literal/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "dune"   {>= "3.11.0"}
  "ppxlib" {= "0.33.0+jst"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Simpler notation for fixed point literals"
description: "
A ppx rewriter that rewrites fixed point literal of the
form 1.0v to conversion functions currently in scope.
"
